# CppPatterns

./: .gitignore  CMakeLists.txt  CppPatterns.h  LICENSE  README.md
src/: CppPatterns.cpp
src/callbacks/: MultiTimedEvent.cpp  MultiTimedEvent.h  TimedEvent.cpp  TimedEvent.h
src/functional/: MultiTimedEvent.cpp  MultiTimedEvent.h  TimedEvent.cpp  TimedEvent.h
src/templated/: MultiTimeEvent.cpp  MultiTimedEvent.h  TimedEvent.cpp  TimedEvent.h
src/utils/: Timer.cpp  Timer.h
test/: CppPatternsTest.cpp
test/callbacks/: MultiTimedEventTests.cpp  TimedEventTests.cpp
test/functional/: FNTimedEventTests.cpp  MultiTimedEventTests.cpp  TimedEventTests.cpp
test/templated/: MultiTimedEventTests.cpp  TimedEventTests.cpp
test/utils/: TimerTests.cpp
